AC_INIT
AC_CONFIG_SRCDIR([lzfP.h])

AC_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_HEADER_STDC

AC_CHECK_SIZEOF(short, 2)
AC_CHECK_SIZEOF(int,   4)
AC_CHECK_SIZEOF(long,  4)

AC_C_CONST

if test "$GCC" = yes; then
   CFLAGS="$CFLAGS -O3 -funroll-all-loops"
else
   AC_MSG_RESULT(no gcc)
fi

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
